crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__operations__push_jump_invalid_jumpdest.snap
---
source: crates/dora-compiler/src/dora/tests/operations.rs
expression: op
snapshot_kind: text
---
module {
  func.func private @dora_fn_nop()
  func.func private @dora_fn_tracing(!llvm.ptr, i8, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_is_static(!llvm.ptr) -> i8
  func.func private @dora_fn_exp(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_chainid(!llvm.ptr) -> i64
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gaslimit_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_memory_ptr(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_memory_size(!llvm.ptr) -> i64
  func.func private @dora_fn_code_copy(!llvm.ptr, !llvm.ptr, i64, i64)
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_call(!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_tload(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_tstore(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func public @main(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr) -> i8 attributes {llvm.emit_c_interface} {
    %c0_i64 = arith.constant 0 : i64
    %0 = llvm.alloca %c0_i64 x !llvm.ptr : (i64) -> !llvm.ptr
    llvm.store %arg2, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb5
  ^bb1(%1: i8):  // 10 preds: ^bb2, ^bb4, ^bb5, ^bb9, ^bb10, ^bb12, ^bb15, ^bb19, ^bb22, ^bb23
    %c0_i64_0 = arith.constant 0 : i64
    %2 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_0, %c0_i64_0, %2, %1) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %1 : i8
  ^bb2(%3: i256):  // pred: ^bb7
    %c89_i8 = arith.constant 89 : i8
    cf.switch %3 : i256, [
      default: ^bb1(%c89_i8 : i8),
      1: ^bb19
    ]
  ^bb3:  // pred: ^bb4
    %c4_i256 = arith.constant 4 : i256
    %4 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c4_i256, %4 : i256, !llvm.ptr
    %5 = llvm.getelementptr %4[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %5, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb10
  ^bb4:  // pred: ^bb6
    %c1024_i64 = arith.constant 1024 : i64
    %6 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %7 = arith.addi %6, %c1_i64 : i64
    llvm.store %7, %arg3 : i64, !llvm.ptr
    %8 = arith.cmpi ult, %c1024_i64, %7 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %8, ^bb1(%c92_i8 : i8), ^bb3
  ^bb5:  // pred: ^bb0
    %9 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %10 = arith.cmpi uge, %9, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %10, ^bb6, ^bb1(%c80_i8 : i8)
  ^bb6:  // pred: ^bb5
    %11 = arith.subi %9, %c3_i64 : i64
    llvm.store %11, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb7:  // pred: ^bb9
    %12 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    %13 = llvm.getelementptr %12[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %14 = llvm.load %13 : !llvm.ptr -> i256
    llvm.store %13, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb2(%14 : i256)
  ^bb8:  // no predecessors
    cf.br ^bb15
  ^bb9:  // pred: ^bb11
    %c1024_i64_1 = arith.constant 1024 : i64
    %15 = llvm.load %arg3 : !llvm.ptr -> i64
    %c-1_i64 = arith.constant -1 : i64
    %16 = arith.addi %15, %c-1_i64 : i64
    llvm.store %16, %arg3 : i64, !llvm.ptr
    %c1_i64_2 = arith.constant 1 : i64
    %17 = arith.cmpi ult, %15, %c1_i64_2 : i64
    %c91_i8 = arith.constant 91 : i8
    cf.cond_br %17, ^bb1(%c91_i8 : i8), ^bb7
  ^bb10:  // pred: ^bb3
    %18 = llvm.load %arg1 : !llvm.ptr -> i64
    %c8_i64 = arith.constant 8 : i64
    call @dora_fn_nop() : () -> ()
    %19 = arith.cmpi uge, %18, %c8_i64 : i64
    %c80_i8_3 = arith.constant 80 : i8
    cf.cond_br %19, ^bb11, ^bb1(%c80_i8_3 : i8)
  ^bb11:  // pred: ^bb10
    %20 = arith.subi %18, %c8_i64 : i64
    llvm.store %20, %arg1 : i64, !llvm.ptr
    cf.br ^bb9
  ^bb12:  // pred: ^bb14
    %c88_i8 = arith.constant 88 : i8
    cf.br ^bb1(%c88_i8 : i8)
  ^bb13:  // no predecessors
    cf.br ^bb19
  ^bb14:  // pred: ^bb16
    %c1024_i64_4 = arith.constant 1024 : i64
    %21 = llvm.load %arg3 : !llvm.ptr -> i64
    %c0_i64_5 = arith.constant 0 : i64
    %22 = arith.addi %21, %c0_i64_5 : i64
    llvm.store %22, %arg3 : i64, !llvm.ptr
    cf.br ^bb12
  ^bb15:  // pred: ^bb8
    %23 = llvm.load %arg1 : !llvm.ptr -> i64
    %c0_i64_6 = arith.constant 0 : i64
    call @dora_fn_nop() : () -> ()
    %24 = arith.cmpi uge, %23, %c0_i64_6 : i64
    %c80_i8_7 = arith.constant 80 : i8
    cf.cond_br %24, ^bb16, ^bb1(%c80_i8_7 : i8)
  ^bb16:  // pred: ^bb15
    %25 = arith.subi %23, %c0_i64_6 : i64
    llvm.store %25, %arg1 : i64, !llvm.ptr
    cf.br ^bb14
  ^bb17:  // pred: ^bb18
    cf.br ^bb23
  ^bb18:  // pred: ^bb20
    %c1024_i64_8 = arith.constant 1024 : i64
    %26 = llvm.load %arg3 : !llvm.ptr -> i64
    %c0_i64_9 = arith.constant 0 : i64
    %27 = arith.addi %26, %c0_i64_9 : i64
    llvm.store %27, %arg3 : i64, !llvm.ptr
    cf.br ^bb17
  ^bb19:  // 2 preds: ^bb2, ^bb13
    %28 = llvm.load %arg1 : !llvm.ptr -> i64
    %c1_i64_10 = arith.constant 1 : i64
    call @dora_fn_nop() : () -> ()
    %29 = arith.cmpi uge, %28, %c1_i64_10 : i64
    %c80_i8_11 = arith.constant 80 : i8
    cf.cond_br %29, ^bb20, ^bb1(%c80_i8_11 : i8)
  ^bb20:  // pred: ^bb19
    %30 = arith.subi %28, %c1_i64_10 : i64
    llvm.store %30, %arg1 : i64, !llvm.ptr
    cf.br ^bb18
  ^bb21:  // pred: ^bb22
    %c1_i256 = arith.constant 1 : i256
    %31 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c1_i256, %31 : i256, !llvm.ptr
    %32 = llvm.getelementptr %31[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %32, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb25
  ^bb22:  // pred: ^bb24
    %c1024_i64_12 = arith.constant 1024 : i64
    %33 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64_13 = arith.constant 1 : i64
    %34 = arith.addi %33, %c1_i64_13 : i64
    llvm.store %34, %arg3 : i64, !llvm.ptr
    %35 = arith.cmpi ult, %c1024_i64_12, %34 : i64
    %c92_i8_14 = arith.constant 92 : i8
    cf.cond_br %35, ^bb1(%c92_i8_14 : i8), ^bb21
  ^bb23:  // pred: ^bb17
    %36 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64_15 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %37 = arith.cmpi uge, %36, %c3_i64_15 : i64
    %c80_i8_16 = arith.constant 80 : i8
    cf.cond_br %37, ^bb24, ^bb1(%c80_i8_16 : i8)
  ^bb24:  // pred: ^bb23
    %38 = arith.subi %36, %c3_i64_15 : i64
    llvm.store %38, %arg1 : i64, !llvm.ptr
    cf.br ^bb22
  ^bb25:  // pred: ^bb21
    %c0_i64_17 = arith.constant 0 : i64
    %c1_i8 = arith.constant 1 : i8
    %39 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_17, %c0_i64_17, %39, %c1_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c1_i8 : i8
  }
}
